--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="styles.css" rel="stylesheet">
+    <script src="main.js" async></script>
     <title>TechShop</title>
   </head>
   <body>
@@ -18,7 +19,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="main.js"></script>
+    
     <div class='row'>
         <div class="card-group" id="itemId">
           <div class="col">
@@ -26,10 +27,10 @@
                 <img src="./images/Samsung J2 Pro.jfif" class="card-img-top" alt="Samsung J2 Pro">
                 <div class="card-body">
                   <h5 class="card-title">Samsung J2 Pro</h5>
-                  <p class="card-text">$ 100.00</p>
+                  <p class="card-text" id='itemPrice'>$ 100.00</p>
                   <form>
                     <input 
-                    type="number" class="form-control" aria-label="Quantity">
+                     id="quantForm" type="number" class="form-control" aria-label="Quantity">
                     </input>
                   </form>
                   <button class="btn-primary" type="submit">Add to Cart</button>
@@ -67,15 +68,44 @@
                     type="number" class="form-control"  aria-label="Quantity">
                     </input>
                   </form>
-                <button class="btn-primary" type="submit">Add to Cart</button>
+                <button class="btn-primary" id="submit-btn" type="submit">Add to Cart</button>
             </div>
           </div>
         </div>       
     </div>
 </div>
+<section>
 <div>
     <h1> Order Details</h1>
-</div>
+
+<div class="grid-container">
+  <div class="grid-item1" >Item Name</div>
+  <div class="grid-item2">Quantity </div>
+  <div class="grid-item3" >Price</div>
+  <div class="grid-item4">Total</div>
+  <div class="grid-item5">Action</div>
+  <div class="grid-item6">Samsung J2 Pro</div>
+  <div class="grid-item7">7</div>
+  <div class="grid-item8">8</div>
+  <div class="grid-item9">9</div>
+  <div class="grid-item10">Remove</div>
+  <div class="grid-item11">Hp Notebook</div>
+  <div class="grid-item12">12</div>
+  <div class="grid-item13">13</div>
+  <div class="grid-item14">14</div>
+  <div class="grid-item15">Remove</div>
+  <div class="grid-item16">Panasonic T44 Lite</div>
+  <div class="grid-item17">17</div>
+  <div class="grid-item18">18</div>
+  <div class="grid-item19">19</div>
+  <div class="grid-item20">Remove</div>
+  <div class="grid-item21" id="totalPrice">Overall Total</div>
+  <div class="grid-item22">22</div>
+  <div class="grid-item23">Remove</div>
+  </div>
+  </div>
+  </section>
+
 
 </body>
 
